Bug 95309 - Insert > File in Draw & Impress don't display all available files
Summary: Insert > File in Draw & Impress don't display all available files
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta3
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords: needsUXEval
Depends on:
Blocks: File-Dialog Insert-File-Content
  Show dependency treegraph
 
Reported: 2015-10-24 22:31 UTC by MM
Modified: 2017-08-23 09:18 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description MM 2015-10-24 22:31:54 UTC
When selecting insert > File you see the 'All files' selected by default.
But you don't actually see all the files available, you only see the files that LO has a filter for it (odg, odf, rtf, etc...).
This is (at least) broken simce v5.0.0.0 b3 on mint 17.2 x64. No problem in v4.4.6.1, I can see all the files there.
Comment 1 raal 2015-10-25 10:42:26 UTC
I can not confirm with version  5.0.2.2, linux.
Comment 2 MM 2015-10-25 12:55:45 UTC
(In reply to raal from comment #1)
> I can not confirm with version  5.0.2.2, linux.

I also tested it with v5.0.3.1 and it still happens.
What do you see ? Do you see *every* file available (as it should be) or just a few ?
Comment 3 raal 2015-10-25 16:07:14 UTC
I see every file. Also tested with Version: 5.1.0.0.alpha1+
Build ID: 9a85743766e8a063d20d5f93ee88758e243397f4
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-10-23_00:56:39

ubuntu, unity.
Comment 4 MM 2015-10-25 18:55:19 UTC
Weird, I've tested it with 5.0.3.1 under mint 17.2 / ubuntu 14.04 / win 10. They all don't show every file available. Even restting profile doesn't help. Same with setting 'Use Libreoffice dialogs'.
Maybe it's not a bug, but I couldn't find any documentation of what insert/file allows and what not. Or when/why this got changed in v5.
Comment 5 Buovjaga 2015-10-26 08:49:58 UTC
Well, the All files hint is (*.odp,;*.otp;*.odg;*.ppt;*.sxi;*.sti;*.sxd;*.rtf;*.html) so technically, what you see is what you get..

But it is true that in 4.3.0.1 it shows All files (*.*).

Would be nice to hear an explanation without bibisecting..

Win 7 Pro 64-bit, Version: 5.0.2.2 (x64)
Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe
Locale: fi-FI (fi_FI)

4.3.0.1
Comment 6 Maxim Monastirsky 2015-10-26 09:16:16 UTC
(In reply to Beluga from comment #5)
> Would be nice to hear an explanation without bibisecting..
See Bug 62101. "All files" seems confusing here, so I guess we should change that string to something else.
Comment 7 MM 2015-10-27 19:28:36 UTC
(In reply to Maxim Monastirsky from comment #6)
> (In reply to Beluga from comment #5)
> > Would be nice to hear an explanation without bibisecting..
> See Bug 62101. "All files" seems confusing here, so I guess we should change
> that string to something else.

That expains it. Why not change the 'all files' to 'Draw/Impress Formats', depending on the program ofcourse.
Comment 8 Xisco Faulí 2016-09-12 12:25:52 UTC
Adding keyword 'bibisectRequest'.
Comment 9 Xisco Faulí 2016-09-19 21:52:28 UTC
Probably UX team has something to say here...
Removing keyword 'regression' and 'bibisectRequest' as per comment 6
Comment 10 Heiko Tietze 2016-09-20 20:32:41 UTC
(In reply to Buovjaga from comment #5)
> Well, the All files hint is
> (*.odp,;*.otp;*.odg;*.ppt;*.sxi;*.sti;*.sxd;*.rtf;*.html) so technically,
> what you see is what you get..

The differentiation of all files is made for instance in GIMP with "All images" vs. "All files". For Insert > Image we call it "<all formats> (*.bmp, *....)", which is a mess by the way. 

My suggestion is "All files" (*) and "Text Documents (*.odt, *.doc, *.docx...)" (if there are not too many entries).

Putting all together we should find another label (cc Sophie) but have also all files to show whatever is found in the folder. And this is clearly an EASYHACK (waiting for the final decision).

PS: Insert > Document... is the command.
Comment 11 Yousuf Philips (jay) (retired) 2016-09-28 09:14:34 UTC
Should be changed to something like 'All supported files' or 'All supported formats' and the last entry of the list should be 'All files (*)' as a fallback for when the file has an incorrect extension or a supported file extension isnt shown in the list (e.g. bug 82994), just like we do with the insert audio/video dialog.
Comment 12 Commit Notification 2017-08-08 09:28:45 UTC
Takeshi Abe committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=99f3d9895f63ed19496bbe47bd36899b0f39dbce

tdf#95309 Add a filter to show all files for "Insert > File"

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.