tdf#95309 Add a filter to show all files for "Insert > File"

in Draw and Impress.

Change-Id: Ia6721f4a25af9fe8b6edd143ecb7ba3f5f3e8a89